--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -145,6 +145,7 @@
             android:text="@string/title_licenses"
             android:textSize="16sp"
             android:background="@drawable/ripple_soft"
+            android:onClick="@{activity.licenses}"
             />
 
         <include layout="@layout/primary_dark_divider" />
