--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -12,6 +12,11 @@
                 android:icon="@drawable/ic_menu_gallery"
                 android:title="@string/title_gallery"
                 />
+            <item
+                android:id="@+id/nav_gallery_clear"
+                android:icon="@drawable/ic_close_black"
+                android:title="@string/title_bg_delete"
+                />
         </menu>
     </item>
 
