--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -21,7 +21,7 @@
             <item
                 android:id="@+id/nav_gallery"
                 android:icon="@drawable/ic_menu_gallery"
-                android:title="@string/title_gallery"
+                android:title="@string/title_set_bg"
                 />
             <item
                 android:id="@+id/nav_gallery_clear"
