--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:context="jp.toastkid.calendar.MainActivity"
+        tools:context="jp.toastkid.calendar.calendar.MainActivity"
         tools:showIn="@layout/app_bar_main"
         >
 
