--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -104,47 +104,7 @@
                 <include layout="@layout/primary_dark_divider"
                     android:layout_width="match_parent" android:layout_height="3dp" />
 
-                <LinearLayout
-                    android:orientation="horizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    >
-                    <LinearLayout
-                        android:orientation="vertical"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:background="@color/soft_background"
-                        >
-                        <TextView
-                            android:layout_width="40dp"
-                            android:layout_height="0dp"
-                            android:layout_weight="1"
-                            android:paddingLeft="@dimen/settings_item_left_margin"
-                            android:maxLines="1"
-                            android:background="@color/soft_background"
-                            android:gravity="center_vertical"
-                            android:text="@string/title_advertisement_1"
-                            android:textSize="16sp"
-                            />
-                        <TextView
-                            android:layout_width="40dp"
-                            android:layout_height="0dp"
-                            android:layout_weight="1"
-                            android:paddingLeft="@dimen/settings_item_left_margin"
-                            android:maxLines="1"
-                            android:gravity="center_vertical"
-                            android:text="@string/title_advertisement_2"
-                            android:textSize="16sp"
-                            />
-                    </LinearLayout>
-                    <FrameLayout
-                        android:id="@+id/ad"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_centerHorizontal="true"
-                        android:layout_alignParentBottom="true"
-                        />
-                </LinearLayout>
+                <include android:id="@+id/ad_area" layout="@layout/ad_banner" />
 
                 <include layout="@layout/primary_dark_divider"
                     android:layout_width="match_parent" android:layout_height="3dp" />
