Implement Interstitial ad.

--- a/app/src/main/res/menu/settings_toolbar_menu.xml
+++ b/app/src/main/res/menu/settings_toolbar_menu.xml
@@ -3,10 +3,17 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".settings.SettingsActivity">
+    tools:context=".settings.SettingsActivity"
+    >
     <item
         android:id="@+id/settings_toolbar_menu_exit"
         android:title="@string/close"
         android:orderInCategory="100"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/toolbar_ad"
+        android:title="@string/title_ad"
+        android:orderInCategory="101"
+        app:showAsAction="never"
+        />
 </menu>
