--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -73,6 +73,12 @@
         </menu>
     </item>
 
+    <item
+        android:id="@+id/nav_about_this_app"
+        android:icon="@mipmap/ic_launcher"
+        android:title="@string/title_about_this_app"
+        />
+
     <item android:title="@string/section_title_share">
         <menu>
             <item
