--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="colorPrimary">#FF002277</color>
     <color name="colorPrimaryDark">#FF000044</color>
     <color name="colorAccent">#FF000B00</color>
+    <color name="textPrimary">#FFE0E0E0</color>
     <color name="white">#FFFFFFFF</color>
     <color name="black">#FF000B00</color>
     <color name="spinner_background">#FFE0E0E0</color>
@@ -17,4 +18,13 @@
     <color name="ripple">#FFE0E0E0</color>
     <color name="pre4_ripple">#FFAAAAAA</color>
     <color name="aw_ripple">#30000000</color>
+
+    <color name="crimson_bg">#AAb71c1c</color>
+    <color name="crimson_font">#EEFDD835</color>
+    <color name="wa_bg">#BB388E3C</color>
+    <color name="wa_font">#CCFFFFFF</color>
+    <color name="cyan_bg">#AA4DD0E1</color>
+    <color name="purple_bg">#CC9C27B0</color>
+    <color name="lime_bg">#CCCDDC39</color>
+    <color name="pinky">#DDFF80AB</color>
 </resources>
