--- a/app/src/main/res/menu/color_setting_toolbar_menu.xml
+++ b/app/src/main/res/menu/color_setting_toolbar_menu.xml
@@ -10,4 +10,9 @@
         android:title="@string/title_add_recommended_colors"
         android:orderInCategory="100"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/color_settings_toolbar_menu_add_random"
+        android:title="@string/title_add_random"
+        android:orderInCategory="100"
+        app:showAsAction="never" />
 </menu>
