--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -73,18 +73,6 @@
         </menu>
     </item>
 
-    <item
-        android:id="@+id/nav_about_this_app"
-        android:icon="@mipmap/ic_launcher"
-        android:title="@string/title_about_this_app"
-        />
-
-    <item
-        android:id="@+id/nav_google_play"
-        android:icon="@drawable/ic_store_black"
-        android:title="@string/title_go_google_play"
-        />
-
     <item android:title="@string/section_title_share">
         <menu>
             <item
@@ -97,6 +85,23 @@
                 android:icon="@drawable/ic_sns"
                 android:title="@string/title_share_twitter"
                 />
+        </menu>
+    </item>
+
+    <item android:title="@string/section_title_about_this_app">
+        <menu>
+            <item
+                android:id="@+id/nav_about_this_app"
+                android:icon="@mipmap/ic_launcher"
+                android:title="@string/title_about_this_app"
+                />
+
+            <item
+                android:id="@+id/nav_google_play"
+                android:icon="@drawable/ic_store_black"
+                android:title="@string/title_go_google_play"
+                />
+            <item android:title="@string/copyright" />
         </menu>
     </item>
 
