--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,6 +14,7 @@
     </style>
 
     <style name="AppTheme.NoActionBar">
+        <item name="colorControlNormal">@color/filter_white</item>
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
