Add privacy policy's link.

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -101,6 +101,11 @@
                 android:icon="@drawable/ic_store_black"
                 android:title="@string/title_go_google_play"
                 />
+            <item
+                android:id="@+id/nav_privacy_policy"
+                android:icon="@drawable/ic_privacy"
+                android:title="@string/privacy_policy"
+                />
             <item android:title="@string/copyright" />
         </menu>
     </item>
