--- a/app/src/main/res/layout/radio_locale.xml
+++ b/app/src/main/res/layout/radio_locale.xml
@@ -3,6 +3,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    style="@style/Border"
     >
     <TextView
         android:layout_width="match_parent"
