--- a/app/src/main/res/layout/activity_background_setting.xml
+++ b/app/src/main/res/layout/activity_background_setting.xml
@@ -30,11 +30,11 @@
 
             <android.support.design.widget.FloatingActionButton
                 android:id="@+id/fab"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
+                android:layout_width="@dimen/fab_size"
+                android:layout_height="@dimen/fab_size"
                 android:layout_gravity="bottom|right"
-                android:layout_marginBottom="5dp"
-                android:layout_marginRight="40dp"
+                android:layout_marginBottom="@dimen/fab_margin_bottom"
+                android:layout_marginRight="@dimen/fab_margin_right"
                 android:background="@color/colorPrimaryDark"
                 android:foreground="@drawable/ripple_transparent"
                 android:src="@drawable/ic_add_white"
