--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,7 @@
     <dimen name="settings_item_height">56dp</dimen>
     <dimen name="settings_item_left_margin">15dp</dimen>
     <dimen name="toolbar_height">56dp</dimen>
+    <dimen name="fab_size">60dp</dimen>
+    <dimen name="fab_margin_bottom">5dp</dimen>
+    <dimen name="fab_margin_right">40dp</dimen>
 </resources>
