--- a/app/src/main/res/layout/appwidget_layout.xml
+++ b/app/src/main/res/layout/appwidget_layout.xml
@@ -16,6 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginLeft="5dp"
+            android:layout_marginRight="90dp"
             android:background="@drawable/ripple_appwidget"
             >
             <ImageView
@@ -31,7 +32,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="30dp"
-                android:layout_marginRight="40dp"
                 android:gravity="center_vertical"
                 android:text="@string/title_search"
                 android:textColor="@color/white"
@@ -44,10 +44,20 @@
                 android:layout_height="2dp"
                 android:layout_marginBottom="5dp"
                 android:layout_gravity="bottom"
-                android:layout_marginRight="40dp"
                 android:background="@color/white"
                 />
         </FrameLayout>
+
+        <ImageView
+            android:id="@+id/widget_launcher"
+            android:layout_width="40dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical|right"
+            android:layout_marginRight="45dp"
+            android:adjustViewBounds="true"
+            android:src="@drawable/ic_launcher"
+            android:background="@drawable/ripple_appwidget"
+            />
 
         <ImageView
             android:id="@+id/widget_calendar"
