--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,9 @@
     <color name="filter_white">#88FFFFFF</color>
     <color name="filter_white_bb">#CCFFFFFF</color>
 
+    <color name="fs_add_bg">#EEE0E0E0</color>
+    <color name="fs_add_ripple">#CCAAAAAA</color>
+
     <color name="ripple">#FFE0E0E0</color>
     <color name="pre4_ripple">#FFAAAAAA</color>
     <color name="aw_ripple">#30000000</color>
