--- a/app/src/main/res/layout/activity_launcher.xml
+++ b/app/src/main/res/layout/activity_launcher.xml
@@ -13,13 +13,28 @@
             android:layout_height="56dp"
             android:minHeight="?android:actionBarSize"
             >
-            <EditText
-                android:id="@+id/filter"
+            <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:hint="@string/title_package_name_filter"
-                android:background="@drawable/ripple_transparent"
-                />
+                >
+                <android.support.v7.widget.AppCompatEditText
+                    android:id="@+id/filter"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:hint="@string/title_package_name_filter"
+                    android:background="@drawable/ripple_transparent"
+                    />
+                <LinearLayout
+                    android:id="@+id/input_border"
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="2dp"
+                    android:layout_marginBottom="5dp"
+                    android:layout_gravity="bottom"
+                    android:background="@color/white"
+                    />
+            </FrameLayout>
+
         </android.support.v7.widget.Toolbar>
 
         <FrameLayout
