Replace Dialog to View.

--- a/app/src/main/res/layout/favorite_search_addition_dialog_content.xml
+++ b/app/src/main/res/layout/favorite_search_addition_dialog_content.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
+    <data>
+        <variable
+            name="action"
+            type="jp.toastkid.calendar.search.favorite.Addition" />
+    </data>
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:orientation="vertical"
@@ -46,5 +51,30 @@
                 android:inputType="text"
                 />
         </android.support.design.widget.TextInputLayout>
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            >
+
+            <Button
+                android:id="@+id/close"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_margin="5dp"
+                android:onClick="@{action.cancel}"
+                android:text="@string/close" />
+
+            <Button
+                android:id="@+id/add"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:text="@string/title_add"
+                android:onClick="@{action.ok}"
+                />
+        </LinearLayout>
     </LinearLayout>
 </layout>
