--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -8,17 +8,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:context="jp.toastkid.calendar.calendar.MainActivity"
+        tools:context="jp.toastkid.calendar.main.MainActivity"
         tools:showIn="@layout/app_bar_main"
         >
-
-        <ImageView
-            android:id="@+id/image"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scaleType="centerCrop"
-            android:adjustViewBounds="true"
-            />
 
         <CalendarView
             android:id="@+id/calendar"
