--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -13,9 +13,8 @@
             android:id="@+id/image"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scaleType="centerCrop"
             android:adjustViewBounds="true"
-            />
+            android:scaleType="centerCrop" />
 
         <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
@@ -29,7 +28,12 @@
                 android:layout_height="?attr/actionBarSize"
                 app:popupTheme="@style/AppTheme.PopupOverlay"
                 />
-
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:foreground="?android:windowContentOverlay"
+                android:layout_below="@+id/tool_bar"
+                />
         </android.support.design.widget.AppBarLayout>
 
         <FrameLayout
