--- a/app/src/main/res/layout/fragment_favorite_search.xml
+++ b/app/src/main/res/layout/fragment_favorite_search.xml
@@ -2,20 +2,14 @@
 <layout>
     <data>
         <variable name="activity"
-            type="jp.toastkid.calendar.search.favorite.FavoriteSearchActivity" />
+            type="jp.toastkid.calendar.search.favorite.FavoriteSearchFragment" />
     </data>
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         >
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="56dp"
-            android:minHeight="?android:actionBarSize"
-            />
 
         <ScrollView
             android:layout_width="match_parent"
