--- a/app/src/main/res/layout/fragment_favorite_search.xml
+++ b/app/src/main/res/layout/fragment_favorite_search.xml
@@ -16,7 +16,8 @@
             android:layout_height="match_parent"
             >
 
-            <FrameLayout
+            <android.support.design.widget.CoordinatorLayout
+                android:id="@+id/content"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 >
@@ -69,7 +70,7 @@
                     </LinearLayout>
                 </LinearLayout>
 
-            </FrameLayout>
+            </android.support.design.widget.CoordinatorLayout>
         </ScrollView>
 
     </LinearLayout>
