--- a/app/src/main/res/menu/settings_toolbar_menu.xml
+++ b/app/src/main/res/menu/settings_toolbar_menu.xml
@@ -7,7 +7,7 @@
     >
     <item
         android:id="@+id/settings_toolbar_menu_exit"
-        android:title="@string/exit"
+        android:title="@string/close"
         android:orderInCategory="100"
         app:showAsAction="never"
         />
