--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/settings_toolbar_menu_exit"
-        android:title="@string/close"
+        android:title="@string/exit"
         android:orderInCategory="100"
         app:showAsAction="never"
         />
