--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,8 +9,8 @@
     </style>
 
     <style name="EditTextStyle" parent="Widget.AppCompat.EditText">
-        <item name="colorControlNormal">@color/soft_background</item>
-        <item name="colorControlActivated">@color/white</item>
+        <item name="colorControlActivated">@color/cyan_bg</item>
+        <item name="android:textColorHighlight">@color/cyan_bg</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
